Update metatranscriptomics tutorials:
- Update tool version
- Update results
- Add custom adapter removal
- Run MetaPhlAn after SortMeRNA
- Update workflows: best practices, comments, tests

--- a/CONTRIBUTORS.yaml
+++ b/CONTRIBUTORS.yaml
@@ -2163,6 +2163,11 @@ odoppelt:
     affiliations:
       - elixir-europe
 
+ogerdfx:
+    name: Christine Oger
+    joined: 2025-06
+    elixir_node: fr
+
 olanag1:
     name: Olha Nahorna
     joined: 2019-07
