--- a/compose.yml
+++ b/compose.yml
@@ -36,3 +36,9 @@ services:
       HOME: '/src/gtn'
     working_dir: '/src/gtn'
     command: 'bash -c "bundle install --path .bundle && bundle exec jekyll serve --strict_front_matter -d _site/training-material --incremental -P ${GTN_PORT:-4000} -H 0.0.0.0 -l --livereload-port ${GTN_RELOAD_PORT:-4001}"'
+    healthcheck:
+      test: ['CMD', 'curl', '-f', 'http://localhost:${GTN_PORT:-4000}/training-material/']
+      interval: 30s
+      timeout: 1s
+      start_period: 2m
+      start_interval: 5s
