add new contributor

--- a/CONTRIBUTORS.yaml
+++ b/CONTRIBUTORS.yaml
@@ -2795,6 +2795,11 @@ sunyi000:
     email: yi.sun@embl.de
     joined: 2021-03
 
+maulakhan:
+    name: Arif UI Maula Khan
+    email: arif.khan@embl.de
+    joined: 2025-07
+
 Swathi266:
     name: Swathi Nataraj
     joined: 2024-12
