text updates based on feedback

--- a/CONTRIBUTORS.yaml
+++ b/CONTRIBUTORS.yaml
@@ -2798,7 +2798,7 @@ sunyi000:
     joined: 2021-03
 
 maulakhan:
-    name: Arif UI Maula Khan
+    name: Arif ul Maula Khan
     email: arif.khan@embl.de
     joined: 2025-07
 
