--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -72,7 +72,7 @@ jobs:
           set -o pipefail
           bundle exec ruby bin/lint.rb --format rdjson | reviewdog -filter-mode=file -reporter=github-pr-review -f=rdjsonl -fail-level=any
         env:
-            REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEW_BOT_TOKEN }}
 
       # - name: rubocop
       #   uses: reviewdog/action-rubocop@v2
