--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -66,13 +66,23 @@ jobs:
           python bin/mergeyaml.py --nondocker > /dev/null
 
       - name: Check Tutorial Formatting
+        if: always()
         run: |
-          find topics/ -name tutorial.md | xargs -n 1 python bin/check-broken-boxes.py | reviewdog -efm="%f:%l: %m" -filter-mode=file -reporter=github-pr-review -fail-level=any
+          mkdir -p ./pr
+          find topics/ -name tutorial.md | xargs -n 1 python bin/check-broken-boxes.py | reviewdog -efm="%f:%l: %m" -filter-mode=file -reporter=local  -fail-level=error
+ > filtered.txt
           set -e
           set -o pipefail
-          bundle exec ruby bin/lint.rb --format rdjson | reviewdog -filter-mode=file -reporter=github-pr-review -f=rdjsonl -fail-level=any
-        env:
-            REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          bundle exec ruby bin/lint.rb --format rdjson | reviewdog -filter-mode=file -f=rdjsonl -reporter=local  -fail-level=error
+ > filtered.json
+#         bundle exec ruby bin/lint.rb --format rdjson | reviewdog -filter-mode=file -reporter=github-pr-review -f=rdjsonl -fail-level=any
+
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: reviewdog
+          path: pr/
+
 
       # - name: rubocop
       #   uses: reviewdog/action-rubocop@v2
