--- a/.github/workflows/reviewdog-comment.yml
+++ b/.github/workflows/reviewdog-comment.yml
@@ -49,9 +49,9 @@ jobs:
 
       - name: Add review comments
         run: |
-          cat ${{ runner.temp }}/artifacts/reviewdog.txt | reviewdog -efm="%f:%l: %m" -filter-mode=file -reporter=github-pr-review -fail-level=any
+          cat ${{ runner.temp }}/artifacts/reviewdog.txt | reviewdog -efm="%f:%l: %m" -reporter=github-pr-review -fail-level=any
 
-          cat ${{ runner.temp }}/artifacts/reviewdog.json | reviewdog -filter-mode=file -reporter=github-pr-review -f=rdjsonl -fail-level=any
-                 env:
+          cat ${{ runner.temp }}/artifacts/reviewdog.json | reviewdog -reporter=github-pr-review -f=rdjsonl -fail-level=any
+        env:
             REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEW_BOT_TOKEN }}
 
