--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -69,10 +69,10 @@ jobs:
         if: always()
         run: |
           mkdir -p ./pr
-          find topics/ -name tutorial.md | xargs -n 1 python bin/check-broken-boxes.py | reviewdog -efm="%f:%l: %m" -filter-mode=file -reporter=local  -fail-level=error > ./pr/reviewdog.txt
+          find topics/ -name tutorial.md | xargs -n 1 python bin/check-broken-boxes.py | reviewdog -efm="%f:%l: %m" -filter-mode=file -reporter=local  -fail-level=error -diff='git diff main' > ./pr/reviewdog.txt
           set -e
           set -o pipefail
-          bundle exec ruby bin/lint.rb --format rdjson | reviewdog -filter-mode=file -f=rdjsonl -reporter=local  -fail-level=error > ./pr/reviewdog.json
+          bundle exec ruby bin/lint.rb --format rdjson | reviewdog -filter-mode=file -f=rdjsonl -reporter=local -fail-level=error -diff='git diff main' > ./pr/reviewdog.json
 
       - uses: actions/upload-artifact@v4
         if: always()
