--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -27,7 +27,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 1
+          fetch-depth: 1000
           persist-credentials: false
 
       - uses: reviewdog/action-setup@v1
@@ -71,10 +71,10 @@ jobs:
           mkdir -p ./pr
           git status
           git branch -a
-          find topics/ -name tutorial.md | xargs -n 1 python bin/check-broken-boxes.py | reviewdog -efm="%f:%l: %m" -filter-mode=file -reporter=local  -fail-level=any -diff='git diff' > ./pr/reviewdog.txt
+          find topics/ -name tutorial.md | xargs -n 1 python bin/check-broken-boxes.py | reviewdog -efm="%f:%l: %m" -filter-mode=file -reporter=github-check  -fail-level=any -diff='git diff' > ./pr/reviewdog.txt
           set -e
           set -o pipefail
-          bundle exec ruby bin/lint.rb --format rdjson | reviewdog -filter-mode=file -f=rdjsonl -reporter=local -fail-level=any -diff='git diff' > ./pr/reviewdog.json
+          bundle exec ruby bin/lint.rb --format rdjson | reviewdog -filter-mode=file -f=rdjsonl -reporter=github-check -fail-level=any -diff='git diff' > ./pr/reviewdog.json
 
       - uses: actions/upload-artifact@v4
         if: always()
