--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -71,10 +71,11 @@ jobs:
           mkdir -p ./pr
           git status
           git branch -a
-          find topics/ -name tutorial.md | xargs -n 1 python bin/check-broken-boxes.py | reviewdog -efm="%f:%l: %m" -filter-mode=file -reporter=local  -fail-level=error  > ./pr/reviewdog.txt
+          env | grep GITHUB | grep -v TOKEN
+          find topics/ -name tutorial.md | xargs -n 1 python bin/check-broken-boxes.py | reviewdog -efm="%f:%l: %m" -filter-mode=file -reporter=github-pr-review  -fail-level=error  > ./pr/reviewdog.txt
           set -e
           set -o pipefail
-          bundle exec ruby bin/lint.rb --format rdjson | reviewdog -filter-mode=file -f=rdjsonl -reporter=local -fail-level=error  > ./pr/reviewdog.json
+          bundle exec ruby bin/lint.rb --format rdjson | reviewdog -filter-mode=file -f=rdjsonl -reporter=github-pr-review -fail-level=error  > ./pr/reviewdog.json
         env:
             REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
