--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -69,15 +69,12 @@ jobs:
         if: always()
         run: |
           mkdir -p ./pr
-          git status
-          git fetch origin main --depth 1
-          git branch -a
-          git diff main
-          env | grep GITHUB | grep -v TOKEN
           find topics/ -name tutorial.md | xargs -n 1 python bin/check-broken-boxes.py | reviewdog -efm="%f:%l: %m" -filter-mode=file -reporter=github-pr-review  -fail-level=error  > ./pr/reviewdog.txt
           set -e
           set -o pipefail
           bundle exec ruby bin/lint.rb --format rdjson | reviewdog -filter-mode=file -f=rdjsonl -reporter=github-pr-review -fail-level=error  > ./pr/reviewdog.json
+          cat ./pr/reviewdog.json
+          cat ./pr/reviewdog.txt
         env:
             REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
