--- a/.github/workflows/reviewdog-comment.yml
+++ b/.github/workflows/reviewdog-comment.yml
@@ -45,13 +45,13 @@ jobs:
             fs.writeFileSync(path.join(temp, 'reviewdog.zip'), Buffer.from(download.data));
 
       - name: 'Unzip artifact'
-        run: ls "${{ runner.temp }}/artifacts"; unzip reviewdog.zip -d "${{ runner.temp }}/artifacts"
+        run:  unzip "${{ runner.temp }}/artifacts/reviewdog.zip"
 
       - name: Add review comments
         run: |
-          cat "${{ runner.temp }}/artifacts/reviewdog.txt" | reviewdog -efm="%f:%l: %m" -reporter=github-pr-review
+          cat reviewdog.txt | reviewdog -efm="%f:%l: %m" -reporter=github-pr-review
 
-          cat "${{ runner.temp }}/artifacts/reviewdog.json" | reviewdog -reporter=github-pr-review -f=rdjsonl
+          cat reviewdog.json | reviewdog -reporter=github-pr-review -f=rdjsonl
         env:
             REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEW_BOT_TOKEN }}
 
