--- a/.github/workflows/reviewdog-comment.yml
+++ b/.github/workflows/reviewdog-comment.yml
@@ -57,9 +57,8 @@ jobs:
           unset GITHUB_ACTIONS
           env | grep GITHUB_ | grep -v TOKEN | sort
 
-          cat reviewdog.txt | reviewdog -efm="%f:%l: %m" -reporter=github-pr-review
+          cat reviewdog.txt | reviewdog -efm="%f:%l: %m" -reporter=github-pr-review -log-level debug -tee
 
-          cat reviewdog.json | reviewdog -reporter=github-pr-review -f=rdjsonl
+          cat reviewdog.json | reviewdog -reporter=github-pr-review -f=rdjsonl -log-level debug -tee
         env:
-            REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.REVIEW_BOT_TOKEN }}
-
+            REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
