--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -76,11 +76,9 @@ jobs:
           echo "export CI_PULL_REQUEST=${pr_num}" >> pr/env.sh
           echo "export CI_COMMIT=${GITHUB_SHA}" >> pr/env.sh
 
-          find topics/ -name tutorial.md | xargs -n 1 python bin/check-broken-boxes.py | reviewdog -efm="%f:%l: %m" -filter-mode=file -reporter=github-pr-review  -fail-level=error  > ./pr/reviewdog.txt
+          find topics/ -name tutorial.md | xargs -n 1 python bin/check-broken-boxes.py | reviewdog -efm="%f:%l: %m" -filter-mode=file -reporter=github-pr-review  -fail-level=error  | tee ./pr/reviewdog.txt
           set -o pipefail
-          bundle exec ruby bin/lint.rb --format rdjson | reviewdog -filter-mode=file -f=rdjsonl -reporter=github-pr-review -fail-level=error  > ./pr/reviewdog.json
-          cat ./pr/reviewdog.json
-          cat ./pr/reviewdog.txt
+          bundle exec ruby bin/lint.rb --format rdjson | reviewdog -filter-mode=file -f=rdjsonl -reporter=github-pr-review -fail-level=error | tee ./pr/reviewdog.json
         env:
             REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
