added upload cloud icon for Teresa

--- a/_config.yml
+++ b/_config.yml
@@ -101,6 +101,7 @@ slack:
 icon-tag:
   announcement: fas fa-bullhorn
   arrow-keys: fa fa-arrows
+  cloud-upload: fa-solid fa-cloud-arrow-up
   code-in: far fa-keyboard
   code-out: fas fa-laptop-code
   cofest: fas fa-users
