--- a/topics/statistics/metadata.yaml
+++ b/topics/statistics/metadata.yaml
@@ -27,3 +27,6 @@ subtopics:
   - id: gai-llm
     title: "Generative Artificial Intelligence and Large Langage Model"
     description: "Tutorials covering the creation, pretraining, and applications of Generative Artificial Intelligence and Large Language Models."
+  - id: flexynesis
+    title: "Flexynesis - multi-omics Integration"
+    description: "Tutorials covering the integration of multi-omics data using advanced statistical and machine learning techniques with Flexynesis package."
