--- a/ORGANISATIONS.yaml
+++ b/ORGANISATIONS.yaml
@@ -432,6 +432,11 @@ uni-freiburg:
     github: false
     ror: "0245cg223"
 
+uni-manchester:
+    name: University of Manchester
+    joined: 2025-08
+    url: https://www.manchester.ac.uk/
+
 unimelb:
     name: The University of Melbourne
     url: https://www.unimelb.edu.au
