--- a/CONTRIBUTORS.yaml
+++ b/CONTRIBUTORS.yaml
@@ -3012,6 +3012,14 @@ tuncK:
     name:  Tunc Kayikcioglu
     joined: 2023-10
 
+uwwint:
+    name: Uwe Winter
+    joined: 2025-09
+    elixir_node: au
+    affiliations:
+      - unimelb
+      - AustralianBioCommons
+
 valentinmarcon:
     name: Valentin Marcon
     joined: 2017-09
