--- a/.github/workflows/optimize-images.yml
+++ b/.github/workflows/optimize-images.yml
@@ -35,6 +35,7 @@ jobs:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
           # For non-Pull Requests, run in compressOnly mode and we'll PR after.
           compressOnly: ${{ github.event_name != 'pull_request' }}
+          minPctChange: '2.5'
       - name: Create Pull Request
         # If it's not a Pull Request then commit any changes as a new PR.
         if: |
