adding contrib and org from #6328

--- a/CONTRIBUTORS.yaml
+++ b/CONTRIBUTORS.yaml
@@ -2020,6 +2020,10 @@ mwolfien:
     name: Markus Wolfien
     joined: 2017-09
 
+martindemko:
+    name: Martin Demko
+    joined: 2025-09
+
 martinwolst:
     name: Martin Wolstencroft
     joined: 2024-01
