--- a/ORGANISATIONS.yaml
+++ b/ORGANISATIONS.yaml
@@ -36,6 +36,11 @@ avans-atgm:
     avatar: "/training-material/shared/images/logo-avans.png"
     ror: "015d5s513"
 
+cesnet:
+    name: cesnet
+    joined: 2025-09
+    url: https://www.cesnet.cz/
+
 carpentries:
     name: The Carpentries
     joined: 2021-09
