Update ORGANISATIONS.yaml rfmf metabohub

--- a/ORGANISATIONS.yaml
+++ b/ORGANISATIONS.yaml
@@ -244,7 +244,14 @@ melbournebioinformatics:
     name: Melbourne Bioinformatics
     url: https://mdhs.unimelb.edu.au/melbournebioinformatics
     avatar: "/training-material/shared/images/Melbourne-Bioinformatics-logo.png"
-    
+
+metabohub:
+    name: MetaboHUB
+    github: false
+    joined: 2025-07
+    url: https://www.metabohub.fr/
+    avatar: "/training-material/shared/images/metabohub.fr"
+
 moffitt:
     name: Moffitt Cancer Center
     url: https://www.moffitt.org/
@@ -346,6 +353,13 @@ qiime2:
     url: https://qiime2.org/
     avatar: https://avatars.githubusercontent.com/u/18176583?s=200&v=4
 
+rfmf:
+    name: Réseau Francophone de Metabolomique et Fluxomique
+    short_name: RFMF
+    github: false
+    joined: 2025-07
+    url: https://www.rfmf.fr/
+    avatar: "/training-material/shared/images/rfmf.fr"
 
 sanbi:
     short_name: SANBI/UWC
